--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <h1>Enter a URL here:</h1>
-  <form method="POST">
-    <input type="input" name="url" ></input>
+  <form method="POST" action="/loading.html">
+    <input type="input" name="url"></input>
   </form>
 </body>
 </html>
