Add styles to markup and append/write to disk on POST request

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="/public/styles.css" />
 </head>
 <body>
-  <h1>Enter a URL here:</h1>
-  <form method="POST" action="/loading.html">
+  <h1>Web Historian</h1>
+  <form method="POST" action="/public/loading.html">
     <input type="input" name="url"></input>
   </form>
+  <script type="text/javascript">
+
+  </script>
 </body>
 </html>
