--- a/web/public/loading.html
+++ b/web/public/loading.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <form method="POST">
-    <h1>Enter a URL here:</h1>
+    <h1>Web Historian</h1>
     <input type="input" name="url"></input>
   </form>
   Our robots are currently archiving the site you requested. Please check back soon for a freshly embalmed copy!
