Add styles and fontfaces to project; clean up archives

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,12 +4,11 @@
   <link rel="stylesheet" type="text/css" href="/public/styles.css" />
 </head>
 <body>
-  <h1>Web Historian</h1>
-  <form method="POST" action="/public/loading.html">
-    <input type="input" name="url"></input>
-  </form>
-  <script type="text/javascript">
-
-  </script>
+  <div class="container">
+    <h1><span>Web</span> Historian</h1>
+    <form method="POST" action="/public/loading.html">
+      <input type="input" name="url"></input>
+    </form>
+  </div>
 </body>
 </html>
