--- a/web/public/loading.html
+++ b/web/public/loading.html
@@ -4,10 +4,12 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
-  <form method="POST">
-    <h1>Web Historian</h1>
-    <input type="input" name="url"></input>
-  </form>
-  Our robots are currently archiving the site you requested. Please check back soon for a freshly embalmed copy!
+  <div class="container">
+    <form method="POST">
+      <h1>Web Historian</h1>
+      <input type="input" name="url"></input>
+    </form>
+    <p>Our robots are currently archiving the site you requested. Please check back soon for a freshly embalmed copy!</p>
+  </div>
 </body>
 </html>
