Modify all elements with unique ID to prevent overwriting archived styles; add CSS fadeout to loading alert

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" type="text/css" href="/public/styles.css" />
-</head>
-<body>
-  <div class="container">
-    <h1><span>Web</span> Historian</h1>
-    <form method="POST" action="/public/loading.html">
-      <input type="input" name="url"></input>
-    </form>
-  </div>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/public/styles.css" />
+  </head>
+  <body>
+    <div id="webhistorian-container">
+      <h1 id="webhistorian-h1"><span id="webhistorian-span">Web</span>Historian</h1>
+      <form id="webhistorian-form" method="POST" action="/public/loading.html">
+        <input id="webhistorian-input" type="input" name="url"></input>
+      </form>
+    </div>
+  </body>
 </html>
