--- a/web/public/loading.html
+++ b/web/public/loading.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-</head>
-<body>
-  <div class="container">
-    <form method="POST">
-      <h1>Web Historian</h1>
-      <input type="input" name="url"></input>
-    </form>
-    <p>Our robots are currently archiving the site you requested. Please check back soon for a freshly embalmed copy!</p>
-  </div>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <div id="webhistorian-container">
+      <h1 id="webhistorian-h1"><span id="webhistorian-span">Web</span>Historian</h1>
+      <form id="webhistorian-form" method="POST">
+        <input id="webhistorian-input" type="input" name="url"></input>
+      </form>
+      <p id="webhistorian-p">Our robots are currently archiving the site you requested. Please check back soon for a freshly embalmed copy!</p>
+    </div>
+  </body>
 </html>
